--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
     <color name="white">#FFFFFF</color>
 
     <color name="colorGreyBackground">#F0F0F4</color>
+    <color name="background">#CECECE</color>
 </resources>
