--- a/app/src/main/res/layout/item_character.xml
+++ b/app/src/main/res/layout/item_character.xml
@@ -34,6 +34,7 @@
                 android:layout_height="@dimen/icon_list_size"
                 android:contentDescription="@null"
                 android:scaleType="centerCrop"
+                app:layout_constraintDimensionRatio="3:2"
                 android:src="@drawable/ic_baseline_image_not_supported_24" />
         </androidx.cardview.widget.CardView>
 
