--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -52,6 +52,7 @@
         <item name="android:layout_marginStart">@dimen/margin_normal</item>
         <item name="android:layout_marginTop">@dimen/margin_small</item>
         <item name="android:ellipsize">end</item>
+        <item name="android:textColor">@android:color/black</item>
         <item name="android:gravity">start</item>
         <item name="android:textSize">@dimen/title_text_size</item>
     </style>
@@ -94,7 +95,7 @@
     </style>
 
     <style name="AppTheme.Headline">
-        <item name="android:fontFamily">@font/roboto_bold</item>
+        <item name="android:fontFamily">@font/roboto</item>
         <item name="android:textSize">20sp</item>
     </style>
 
