--- a/app/src/main/res/layout/fragment_product_detail.xml
+++ b/app/src/main/res/layout/fragment_product_detail.xml
@@ -17,7 +17,7 @@
             android:layout_marginTop="@dimen/margin_large">
 
             <TextView
-                android:id="@+id/title_text_view"
+                android:id="@+id/title_view"
                 style="@style/TextView.Title"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
@@ -29,7 +29,7 @@
                 tools:text="Title" />
 
             <ImageView
-                android:id="@+id/picture_image_view"
+                android:id="@+id/image_view"
                 android:layout_width="0dp"
                 android:layout_height="@dimen/detail_image_height"
                 android:layout_marginStart="@dimen/margin_large"
@@ -38,11 +38,11 @@
                 android:layout_marginBottom="@dimen/margin_normal"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/title_text_view"
+                app:layout_constraintTop_toBottomOf="@+id/title_view"
                 tools:background="@color/background" />
 
             <TextView
-                android:id="@+id/price_text_view"
+                android:id="@+id/price_view"
                 style="@style/TextView.Title"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
@@ -51,7 +51,7 @@
                 android:layout_marginEnd="@dimen/margin_large"
                 android:text="@string/detail_price"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/picture_image_view" />
+                app:layout_constraintTop_toBottomOf="@+id/image_view" />
 
             <ImageView
                 android:id="@+id/image_view_ic_star"
@@ -59,9 +59,9 @@
                 android:layout_height="0dp"
                 android:layout_marginEnd="@dimen/margin_large"
                 android:layout_marginBottom="@dimen/spacing_xsmall"
-                app:layout_constraintBottom_toBottomOf="@+id/price_text_view"
+                app:layout_constraintBottom_toBottomOf="@+id/price_view"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="@+id/price_text_view" />
+                app:layout_constraintTop_toTopOf="@+id/price_view" />
 
             <TextView
                 android:id="@+id/textView"
@@ -71,12 +71,12 @@
                 android:layout_marginStart="@dimen/spacing_small"
                 android:layout_marginTop="@dimen/margin_large"
                 app:layout_constraintEnd_toStartOf="@+id/image_view_ic_star"
-                app:layout_constraintStart_toEndOf="@+id/price_text_view"
-                app:layout_constraintTop_toBottomOf="@+id/picture_image_view"
+                app:layout_constraintStart_toEndOf="@+id/price_view"
+                app:layout_constraintTop_toBottomOf="@+id/image_view"
                 tools:text="$10" />
 
             <TextView
-                android:id="@+id/textView_title_reviews"
+                android:id="@+id/description_title_view"
                 style="@style/TextView.Medium"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
@@ -86,7 +86,7 @@
                 android:text="Description:"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/price_text_view"
+                app:layout_constraintTop_toBottomOf="@+id/price_view"
                 tools:visibility="visible" />
 
             <TextView
@@ -97,7 +97,7 @@
                 android:layout_marginTop="@dimen/margin_normal"
                 android:layout_marginEnd="@dimen/margin_large"
                 android:focusableInTouchMode="false"
-                app:layout_constraintTop_toBottomOf="@+id/textView_title_reviews"
+                app:layout_constraintTop_toBottomOf="@+id/description_title_view"
                 tools:visibility="visible" />
 
             <!--                android:onClick="@{ () -> viewModel.openLink() }"-->
