--- a/app/src/main/res/layout/fragment_product_detail.xml
+++ b/app/src/main/res/layout/fragment_product_detail.xml
@@ -77,7 +77,7 @@
 
             <TextView
                 android:id="@+id/description_title_view"
-                style="@style/TextView.Medium"
+                style="@style/TextView.Big"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/margin_large"
@@ -91,6 +91,7 @@
 
             <TextView
                 android:id="@+id/description_view"
+                style="@style/TextView.Medium"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/margin_large"
@@ -99,23 +100,6 @@
                 android:focusableInTouchMode="false"
                 app:layout_constraintTop_toBottomOf="@+id/description_title_view"
                 tools:visibility="visible" />
-
-            <!--                android:onClick="@{ () -> viewModel.openLink() }"-->
-            <!--                android:text="@{ viewModel.productField.productUrl }"-->
-            <!--            <TextView-->
-            <!--                android:id="@+id/textView_title_trailers"-->
-            <!--                style="@style/TextView.Medium"-->
-            <!--                android:layout_width="0dp"-->
-            <!--                android:layout_height="wrap_content"-->
-            <!--                android:layout_marginStart="@dimen/margin_large"-->
-            <!--                android:layout_marginTop="@dimen/margin_normal"-->
-            <!--                android:layout_marginEnd="@dimen/margin_large"-->
-
-            <!--                app:layout_constraintEnd_toEndOf="parent"-->
-            <!--                app:layout_constraintStart_toStartOf="parent"-->
-            <!--                app:layout_constraintTop_toBottomOf="@+id/recyclerView_reviews"-->
-            <!--                tools:text="http://url.com"-->
-            <!--                tools:visibility="visible" />-->
 
             <View
                 android:id="@+id/view_line_bottom"
