--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -7,7 +7,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/colorGreyBackground"
-        tools:context=".presentation.search.SearchFragment">
+        tools:context=".presentation.ui.search.SearchFragment">
 
         <androidx.cardview.widget.CardView
             android:id="@+id/search_view_parent"
